# claude-wiki

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  install.sh  main.py  pyproject.toml
.github/workflows/: release.yml
scripts/: wiki.py
templates/: CLAUDE.template.md
wiki/: __init__.py  check_paths.py  cli.py  detect_drift.py  eject.py  hook_setup.py  init.py  lib.py  status.py  validate.py
wiki/templates/: CLAUDE.template.md  WIKI_MERGE.md  WIKI_UPDATE.md  instructions.md  llm.md  wiki-instructions.md
