[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-wiki"
version = "0.1.0"
description = "Documentation wiki manager for Claude Code CLAUDE.md files"
requires-python = ">=3.11"

[project.scripts]
claude-wiki = "wiki.cli:main"

[tool.setuptools.packages.find]
include = ["wiki*"]
